# mir-kiosk-chromium

./: .gitignore  Dockerfile  LICENSE  README.MD  TODO
glue/: chromium-browser.launcher  i3.config
snap/: .xwayland.launcher.swp  chromium-browser.launcher  chromium-browser.launcher.save  chromium-policy.json  chromium-policy.json.in  configure-kiosk.py.in  crx-server.py  i3.config  makekioskcrx.sh  snapcraft.yaml  updates.xml.in  xwayland.launcher
snap/hooks/: configure  install
xwayland-preload/: CMakeLists.txt  preload.c
